# asc3

./: .gitignore  CMakeLists.txt  README.md
include/: core.h  utils.h
include/core/: lights.h  materials.h  primitives.h  ray.h  scene.h  vec.h
include/swpt/: intersectable.h  pathtracer.h
include/utils/: canvas.h  utils.h
src/core/: lights.cpp  materials.cpp  primitives.cpp  scene.cpp
src/examples/: gradient.cpp  main.cpp  pathtracer.cpp  software_pathtracer.cpp
src/swpt/: intersectable.cpp  pathtracer.cpp
src/utils/: canvas.cpp
